fix: harden new 2026-roadmap features for large-scale fleet use
Large-scale usability QA over the W1-W8 features (#252-#259) surfaced six
correctness/scale defects under fleet-sized load. Each is fixed at the
mechanism, not patched around:

- OtlpJsonBuilder ignored argus.metrics.legacyNames and dual-emitted every
  argus_* duplicate over OTLP unconditionally, while the Prometheus path gates
  them. legacyNames=false halved Prometheus cardinality but never the OTLP
  stream. Mirror the Prometheus gating exactly (vt-active, heap used/committed,
  all three CPU ratios, metaspace used/committed/classes); argus-unique series
  with no semconv equivalent still always ship.
- PrometheusMetricsCollector kept the semconv HELP/TYPE dedup set as a shared
  instance field, racing under concurrent scrapes (Prometheus + agent) and
  corrupting the scrape. Make it per-scrape method-local.
- PinningAnalyzer used a volatile count++ (non-atomic, lost updates) and evicted
  via removeIf(count <= 1), which wiped the whole map when pinning was spread
  across many distinct singleton sites. Use AtomicLong and evict by retaining
  the top-N by count with a tie-break that guarantees bounded growth.
- StructuredConcurrencyView.renderNode recursed without bound — a deeply nested
  StructuredTaskScope tree (or an adversarial dump) overflowed the stack. Cap
  the render depth and elide beyond it.
- AnomalyDetector evicted its recent-anomaly ring via ArrayList.remove(0)
  (O(ring) per fire); switch to ArrayDeque for O(1) head eviction.
- ProfileTraceContext compiled a regex per trace-context normalize() call on the
  encode hot path; hoist to a static Pattern.

Adds OtlpJsonBuilderMetricsTest cases for the legacyNames gating (on/off) and a
new PinningAnalyzerTest covering the eviction policy. All touched-module tests
green.

Signed-off-by: rlaope <piyrw9754@gmail.com>